Fix page title so it fits on mobile.

--- a/landing/src/App.css
+++ b/landing/src/App.css
@@ -18,7 +18,7 @@ header {
 header h1 {
     display:inline-block;
     font-family: titleFont;
-    font-size: 50pt;
+    font-size: 40pt;
     color: DeepPink;
     margin:0px 0px -20px 10px;
     padding:0px;
@@ -76,4 +76,11 @@ nav li a:hover {
 .game-list-container li.selected {
     background-color: darkviolet;
     color: white;
+}
+
+@media screen and (max-width: 600px) {
+    header h1 {
+        font-size: 20pt;
+        margin-top: 10px;
+    }
 }
